APW-3 correction newsletter on mobile

--- a/src/styles/newsletter.scss
+++ b/src/styles/newsletter.scss
@@ -33,12 +33,13 @@
 }
 
 .newsletter-input {
-  width: 500px;
+  width: 180px;
   border: 2px solid red;
   height: 40px;
   margin-left: 10px;
 
   @include sm {
+    width: 500px;
     margin-left: auto;
   }
 
